# MLAPI

./: .gitignore  README.md
C#/quotes/: Program.cs  Startup.cs  package.json  quotes.csproj  serverless.template.yml  serverless.yml
C#/quotes/Functions/: GetHeadFunction.cs
Cpp/quotes/: CMakeLists.txt  main.cpp  serverless.template.yml  serverless.yml
Cpp/quotes/model/Helper/: Helper.cpp  Helper.h
Cpp/quotes/model/generalService/: Build  CMakeLists.txt  generalService.cpp  generalService.h  generalServiceClient.cpp  generalServiceClient.h
Cpp/quotes/model/linearService/: Build  CMakeLists.txt  linearServiceClient.cpp  linearServiceClient.h
Cpp/quotes/model/neighborsService/: Build  CMakeLists.txt  neighborsServiceClient.cpp  neighborsServiceClient.h
Cpp/quotes/model/polynomialService/: Build  CMakeLists.txt  polynomialServiceClient.cpp  polynomialServiceClient.h
Cpp/quotes/model/svmService/: Build  CMakeLists.txt  svmServiceClient.cpp  svmServiceClient.h
GoLang/: serverless.yml
GoLang/quotes/: Makefile  generalService.go  go.mod  go.sum  handle.go  helper.go  linearService.go  main.go  neighborsService.go  polynomialService.go  serverless.template.yml  serverless.yml  svmService.go
GoLang/quotes/model/: generalService.go  helper.go  linearService.go  neighborsService.go  polynomialService.go  svmService.go
GoLang/quotes/swagger/: swagger.json
Java/quotes/: .bazelrc  BUILD  Readme.md  WORKSPACE  build.gradle  pom.xml  serverless.template.yml  serverless.yml  template.yml
Java/quotes/src/main/: AIProto
Java/quotes/src/main/java/com/quotes/: Application.java  StreamLambdaHandler.java
Java/quotes/src/main/java/com/quotes/AIProto/: EnumExpression.java  GeneralExpression.java  LinearExpression.java  NearestNeighbors.java  NpLibrary.java  PolynomialFeatures.java  SvmExpression.java
Java/quotes/src/main/java/com/quotes/controller/: PingController.java
Java/quotes/src/test/java/com/quotes/: StreamLambdaHandlerTest.java
Javascript/quotes/: index.js  package.json  serverless.template.yml  serverless.yml
Javascript/quotes/model/: linearService.js  neighborsService.js  polynomialService.js  svmService.js
Javascript/quotes/module/: generalService.js  helper.js  packageDefinition.js  polynomialService.js
Python/quotes/: .env.example  Makefile  app.py  grpc.py  package.json  requirements.txt  serverless.template.yml  serverless.yml
Python/quotes/model/: generalService.py  helper.py  linearService.py  neighborsService.py  polynomialService.py  svmService.py
